overflow fix

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -59,7 +59,6 @@
   grid-template-columns: 1fr auto;
   gap: 1rem;
   font-size: 15px;
-  overflow: hidden;
   @media (max-width: $md-screen-size) {
     grid-template-columns: 1fr;
   }
