--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@ body {
   display: flex;
   gap: 2rem;
   padding: 0 1rem;
+  overflow: hidden;
 }
 
 .all,
